# python_squadron

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
analyze-data-with-graph/: analyze.py
onecell_auto_input/: README.md  build_windows.bat  main.py  pyproject.toml  settings.ini
onecell_auto_input/src/onecell/: app.py  main.py  onecell_template.xlsx  parser.py  preset.py
parse-syslog/: diagnose2.py  main.py
product_auto_input/: app.py  pyproject.toml  settings.json
