[project]
name = "python-toys"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
]

[project.scripts]
analyze-data-with-graph = "analyze-data-with-graph.main:main"
parse-syslog = "parse-syslog.main:main"
product-auto-input = "product_auto_input.main:main"

[tool.uv.workspace]
members = [
    "packages/core",
]
