[project]
name = "onecell"
version = "1.5.0"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "xlrd>=2.0",
]

[project.scripts]
onecell = "onecell.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onecell"]

[tool.hatch.build.targets.wheel.force-include]
"src/onecell/KCC-Ganpan.ttf" = "onecell/KCC-Ganpan.ttf"
"src/onecell/app_icon.ico"   = "onecell/app_icon.ico"

[tool.uv]
package = true